--- a/Contador-de-palavras/index.html
+++ b/Contador-de-palavras/index.html
@@ -12,7 +12,7 @@
         <h1>Contador de palavras</h1>
         <textarea id="textarea" cols="40" rows="10"></textarea>
         <button onclick="calcular()">Calcular</button>
-        <p id="resultado">resultado</p>
+        <p id="resultado"></p>
     </div>
     <script src="script.js"></script>
 </body>
